# sigil

./: .gitignore  LICENSE
SplitChapter/: config.ini  edit_regexp_qt6.py  main_ui_qt6.py  myQtClass.py  other_qt6.py  plugin.py  plugin.xml  pyqt_import.py  res_rc.py  treeview_qt6.py  update_record.txt
sigil-env/: pyproject.toml
sigil-env/src/sigil_env/: __init__.py  bookcontainer.py  inputcontainer.py  launcher.py  opf_parser.py  outputcontainer.py  wrapper.py
