[project]
name = "sigil-env"
version = "0.1.0"
description = ""
authors = [
    {name = "usernameless",email = "104410710+usernamelessss@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "sigil_env", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
